plugins {
    id "java"
}

sourceCompatibility = "14"

repositories {
    jcenter()
}

dependencies {
    compile project(":chess-core")

    compile "org.telegram:telegrambots:4.7"

    compile "ch.qos.logback:logback-classic:1.2.3"

    testImplementation "org.assertj:assertj-core:3.11.1"
    testImplementation "org.mockito:mockito-core:2.1.0"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    useJUnitPlatform()
    jvmArgs "--enable-preview"
}

jar {
    manifest {
        attributes "Main-Class": "matvey.realchess.telegram.ChessBotApp"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}